--- a/src/GUI/ObjectOrientedCodeFrame.form
+++ b/src/GUI/ObjectOrientedCodeFrame.form
@@ -48,7 +48,7 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
-    <Property name="title" type="java.lang.String" value="Object Oriented Code"/>
+    <Property name="title" type="java.lang.String" value="NO4"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="menuBar" type="java.lang.String" value="jMenuBar1"/>
