--- a/src/GUI/Output.form
+++ b/src/GUI/Output.form
@@ -23,6 +23,7 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="title" type="java.lang.String" value="NO4"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -91,7 +92,7 @@
         </Property>
       </Properties>
       <AccessibilityProperties>
-        <Property name="AccessibleContext.accessibleName" type="java.lang.String" value="DFD"/>
+        <Property name="AccessibleContext.accessibleName" type="java.lang.String" value="Dataflow Log"/>
       </AccessibilityProperties>
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout"/>
@@ -99,8 +100,8 @@
         <Container class="javax.swing.JPanel" name="jPanel1">
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-              <JTabbedPaneConstraints tabName="          DFD          ">
-                <Property name="tabTitle" type="java.lang.String" value="          DFD          "/>
+              <JTabbedPaneConstraints tabName="   Dataflow Log  ">
+                <Property name="tabTitle" type="java.lang.String" value="   Dataflow Log  "/>
               </JTabbedPaneConstraints>
             </Constraint>
           </Constraints>
@@ -183,8 +184,8 @@
         <Container class="javax.swing.JPanel" name="jPanel3">
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-              <JTabbedPaneConstraints tabName="  Class Diagram  ">
-                <Property name="tabTitle" type="java.lang.String" value="  Class Diagram  "/>
+              <JTabbedPaneConstraints tabName="Class Diagram Log ">
+                <Property name="tabTitle" type="java.lang.String" value="Class Diagram Log "/>
               </JTabbedPaneConstraints>
             </Constraint>
           </Constraints>
@@ -227,7 +228,7 @@
     <Component class="javax.swing.JButton" name="jButton1">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\Asad\Downloads\button (6).png"/>
+          <Image iconType="2" name="C:\resources\button (6).png"/>
         </Property>
       </Properties>
       <Events>
@@ -239,7 +240,7 @@
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\Asad\Downloads\Projectaaa\NO4 (3)\NO4 (3)\Resources\header.jpg"/>
+          <Image iconType="2" name="C:\resources\header.jpg"/>
         </Property>
       </Properties>
     </Component>
