--- a/src/GUI/SelectedFile.form
+++ b/src/GUI/SelectedFile.form
@@ -3,6 +3,7 @@
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="title" type="java.lang.String" value="NO4"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -75,7 +76,7 @@
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\Asad\Downloads\Projectaaa\NO4 (3)\NO4 (3)\Resources\header.jpg"/>
+          <Image iconType="2" name="C:\resources\header.jpg"/>
         </Property>
       </Properties>
     </Component>
@@ -97,7 +98,7 @@
     <Component class="javax.swing.JButton" name="jButton1">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\Asad\Desktop\strat_btn.png"/>
+          <Image iconType="2" name="C:\resources\strat_btn.png"/>
         </Property>
       </Properties>
       <Events>
