--- a/src/GUI/StartFrame.form
+++ b/src/GUI/StartFrame.form
@@ -3,7 +3,7 @@
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
-    <Property name="title" type="java.lang.String" value="Splash Screen"/>
+    <Property name="title" type="java.lang.String" value="NO4"/>
     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
       <Color blue="cc" green="cc" red="ff" type="rgb"/>
     </Property>
@@ -115,7 +115,7 @@
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\Asad\Downloads\Projectaaa\NO4 (3)\NO4 (3)\Resources\header.jpg"/>
+          <Image iconType="2" name="C:\resources\header.jpg"/>
         </Property>
       </Properties>
     </Component>
